// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reports products when present (v3.5) 1`] = `
Array [
  "p_123",
  399,
  "BGP",
  2,
  Object {
    "banana": "yellow",
    "products": Array [
      Object {
        "currency": "BGP",
        "price": 399,
        "product_id": "p_123",
        "quantity": 2,
      },
      Object {
        "price": 0,
        "product_id": "p_456",
      },
    ],
  },
]
`;

exports[`reports products when present (v3.5) 2`] = `
Array [
  "p_456",
  0,
  "USD",
  1,
  Object {
    "banana": "yellow",
    "products": Array [
      Object {
        "currency": "BGP",
        "price": 399,
        "product_id": "p_123",
        "quantity": 2,
      },
      Object {
        "price": 0,
        "product_id": "p_456",
      },
    ],
  },
]
`;

exports[`reports products when present (v4.1) 1`] = `
Array [
  "p_123",
  399,
  "BGP",
  2,
  Object {
    "banana": "yellow",
    "products": Array [
      Object {
        "currency": "BGP",
        "price": 399,
        "product_id": "p_123",
        "quantity": 2,
      },
      Object {
        "price": 0,
        "product_id": "p_456",
      },
    ],
  },
]
`;

exports[`reports products when present (v4.1) 2`] = `
Array [
  "p_456",
  0,
  "USD",
  1,
  Object {
    "banana": "yellow",
    "products": Array [
      Object {
        "currency": "BGP",
        "price": 399,
        "product_id": "p_123",
        "quantity": 2,
      },
      Object {
        "price": 0,
        "product_id": "p_456",
      },
    ],
  },
]
`;
